[gd_scene load_steps=3 format=3 uid="uid://bdyht7kyjay3y"]

[ext_resource type="Script" path="res://scenes/maps/spawner/spawner.gd" id="1_hhcuf"]
[ext_resource type="Script" path="res://scenes/maps/spawner/marker2d.gd" id="2_m2sbv"]

[node name="Spawner" type="Node2D"]
z_index = 10
script = ExtResource("1_hhcuf")
spawn_rate = 3.0
enemy_count = 40
enemies = {
"helicopter": 5,
"infantry_t1": 45,
"infantry_t2": 40,
"tank": 15
}

[node name="SpawnsContainer" type="Node2D" parent="."]

[node name="SpawnLocation1" type="Marker2D" parent="SpawnsContainer"]
script = ExtResource("2_m2sbv")

[node name="SpawnLocation2" type="Marker2D" parent="SpawnsContainer"]
script = ExtResource("2_m2sbv")

[node name="SpawnLocation3" type="Marker2D" parent="SpawnsContainer"]
script = ExtResource("2_m2sbv")
spawn_type = 1

[node name="EnemyContainer" type="Node2D" parent="."]

[node name="ProjectileContainer" type="Node" parent="."]

[node name="WaveTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="WaveTimer" to="." method="_start_wave"]
